src/test/ui/regions/regions-escape-via-trait-or-not.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/regions-escape-via-trait-or-not.rs:18:14
   |
LL |     with(|o| o)
   |              ^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #2 defined on the body at 18:10...
  --> $DIR/regions-escape-via-trait-or-not.rs:18:10
   |
LL |     with(|o| o)
   |          ^^^^^
   = note: ...so that the expression is assignable:
           expected &isize
              found &isize
note: but, the lifetime must be valid for the call at 18:5...
  --> $DIR/regions-escape-via-trait-or-not.rs:18:5
   |
LL |     with(|o| o)
   |     ^^^^^^^^^^^
note: ...so that argument is valid for the call
  --> $DIR/regions-escape-via-trait-or-not.rs:18:10
   |
LL |     with(|o| o)
   |          ^^^^^

error: aborting due to previous error

